gcc/testsuite/obj-c++.dg/syntax-error-8.mm
@interface A /* { dg-error "-:expected ..end." "" { target *-*-* } .+1 } */
